cargo-features = ["named-profiles"]

[package]
name = "read-test"
version = "0.1.0"
edition = "2018"


[dependencies]

[features]
profiling = []
default = []

[dependencies.tokio]
version = "1.6.0"
features = ["fs", "io-util", "macros", "rt"]

[profile.release-profile]
inherits = "release"
debug = true

[[bin]]
name = "profile01"
required-features = ["profiling"]
path = "profiles/profile01.rs"
doc = false
test = false
bench = false
harness = false