cargo-features = ["named-profiles"]

[package]
name = "read-test"
version = "0.1.0"
edition = "2018"
default-run = "read-test"

[dependencies]
thiserror = "1.0.25"
structopt = "0.3.21"

[features]
profiling = []
default = []

[dependencies.tokio]
version = "1.6.0"
features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"]

[profile.release-profile]
inherits = "release"
debug = true

[[bin]]
name = "profile01"
required-features = ["profiling"]
path = "profiles/profile01.rs"
doc = false
test = false
bench = false
harness = false